Протоколы передачи данных (финальная версия)

--- a/main.tex
+++ b/main.tex
@@ -311,14 +311,25 @@ Cucumber – это фреймворк, реализующий подход BDD. В Cucumber для разработки тест
 \end{Figure}
 
 \subsection{Описание протоколов передачи данных}
-
-\subsubsection{Ethernet}
-\subsubsection{LIN}
+Протоколы передачи данных Ethernet, LIN, CAN и FlexRay необходимы для осуществления обмена информацией между усправляющим и управляемым устройствами в автомобильной сети. Ethernet и LIN используются для малого спектра устройств. Помимо этого они использутся во внутреннем обмене и для настоящией работы не представляют практического интереса. Рассмотрим подробнее протоколы CAN и FlexRay, необходимые для осуществления внешнего воздействия на тестируемое устройство.
 \subsubsection{CAN}
+Controller Area Network (сеть контроллеров) -- это стандарт промышленной сети, отличительной особенностью которого является возможность объединения различных исполнительных устройств и датчиков в единую сеть. Он обладает тремя режимами передачи данных: последовательный, широковещательный и пакетный. Данный протокол был разработан компанией Bosh в середине 1980-х и по настоящее время используется в автомобильной промышленности, промышленной автоматизации. Скорость передачи данных по CAN шине может достигать 1 Мбит/с. Отличительной особенностью этого стандарта является возможность передачи в отрыве от физического уровня модели ISO. Однако в практическом применении CAN шина основана на топологии шина с физическим уровнем в виде дифференциальной пары. Передача кадров принимается всеми узлами сети. Рассмотрим виды кадров данного протокола:
+\begin{itemize}
+\itemКадр данных (data frame) — передаёт данные;
+\itemКадр удаленного запроса (remote frame) — служит для запроса на передачу кадра данных с тем же идентификатором;
+\itemКадр перегрузки (overload frame) — обеспечивает промежуток между кадрами данных или запроса;
+\itemКадр ошибки (error frame) — передаётся узлом, обнаружившим в сети ошибку.
+\end{itemize}
 
+Общий вид кадра представлен на рисунке \ref{fCAN}. В начале каждого кадра идет синхронизирующая пауза, обозначающая его начало. Следом идет 11 битный идентификатор сообщения, после которого находится поле данных изменяемой длины, но не привышающей 8 байт. Следующие 15 бит содержат контрольную сумму кадра. Далее указываются 1 битные поля: разграничитель контрольной суммы, который должен быть притянутым к нулю, промежуток подтвержденя(при отправке выставляется в 0, при приеме в 1) и разграничитель подтверждения (должен быть равным нулю). Завершающим полем является конец кадра, длина которого 7 бит. 
+
+\begin{Figure}[h!]{Кадр протокола CAN}{fCAN}
+{\includegraphics[width=\linewidth]{res/CAN}}
+\label{fig:image}
+\end{Figure}
 
 \subsubsection{FlexRay}
-В 2004 году компания NXP совместно с BMW, Diamler, Bosh, GM и Volkswagen представила новый сетевой протокол для автомобилей. Этот высокоскоростной сетевой протокол обладает пропусткной способностью до 10 Мбит/с. Данная шина работает в цикле из двух сегментов: статического и динамического. Статический сегмент разделен на участки для отдельных типов обменов, предоставляя гарантии реального времени. Динамический сегмент в свою очередь работает по принципу, схожему с шиной CAN, где в данном случае контроль над шиной может быть получен участниками топологии в любой момент времени. 
+В 2004 году компания NXP совместно с BMW, Diamler, Bosh, GM и Volkswagen представила новый сетевой протокол для автомобилей. Этот высокоскоростной сетевой протокол обладает пропусткной способностью до 10 Мбит/с. Данная шина работает в цикле из двух сегментов: статического и динамического. Статический сегмент разделен на участки для отдельных типов обменов, предоставляя гарантии реального времени. Динамический сегмент в свою очередь работает по принципу, схожему с шиной CAN, где в данном случае контроль над шиной может быть получен участниками топологии в любой момент времени. Данный протокол используют вместо CAN, когда важна высокая скорость передачи данных.
 
 Кадр данного протокола, представленый на рисунке \ref{fFlexRay}, разделен на три сегмента. Заголовочный сегмент состоит из полей постоянной длины. Первые пять бит отводятся под управляющие сигналы, к которым относятся: специально зарезервированный бит, бит указателя преамбулы, индикатор нулевого кадра, бит синхронизации, бит начала кадра. Следующие 11 бит представляют собой поле, хранящее идентификационный номер кадра. Длина полезной информации, которую несет в себе кадр, содержится в следующих 7 битах. На основе этих двух полей производится вычисление контрольной суммы заголовочного сегмента, которая хранится в следующих 7 битах.  Последние 6 бит заголовочного сегмента являются счетчиком. Таким образом длина заголовочного сегмента равна 5 байтам.  
  
@@ -417,7 +428,7 @@ S – начальный символ грамматики.
 \end{itemize}
 
 %Компилируемый или интерпретируемый?
-\section{Общая структура}
+\section{Разработка языка}
 Существует два главных вида языков программирования: компилируемый и интерпретируемый. 
 	Компилятор выясняет все, что должна выполнить программая, превращает иснтрукции в машинный код и сохраняет его, чтобы выполнить позже. 
 	Интрепретатор проходит всю программу строчку за строчкой и тут же выполняет.
@@ -427,10 +438,10 @@ S – начальный символ грамматики.
 В случае разработки интерпретатора стадии разработки можно разбить на следующие этапы: 
 
 \begin{itemize}
-\itemЛексический анализ – разбор исходного кода на токены. Этот этап выполняется лексером.
-\itemСинтаксический анализ – сбор токенов в абстрактное синтаксическое дерево (AST). Данный этап выполняется синтаксическим анализатором (парсером).
-\itemсемантический анализ;
-\itemИсполенение AST 
+\itemЛексический анализ – разбор исходного кода на токены. Этот этап выполняется лексером;
+\itemСинтаксический анализ – сбор токенов в абстрактное синтаксическое дерево (AST). Данный этап выполняется синтаксическим анализатором (парсером);
+\itemСемантический анализ;
+\itemИсполенение AST. 
 \end{itemize}
 
 
@@ -544,7 +555,7 @@ ANTLR4 удобен для работы с AST, является свободным программным обеспечением, пре
 
 fragment S: [sS];
  
- \lstinputlisting[caption=Ключевые слова, language=java,  firstline=22,  lastline=36 , label = {lst:listKeyWords}]{res/BddLexer.g4}
+\lstinputlisting[caption=Ключевые слова, language=java,  firstline=22,  lastline=36 , label = {lst:listKeyWords}]{res/BddLexer.g4}
  
  После шага должна идти инструкция, определяемая пользователем языка. Например, если необходимо проверить функцию записи определенных данных в энергонезависимой памяти, нужно реализовать следующий набор шагов тестового сценария: 
 
