финальная версия введения в автомобильные сети

--- a/main.tex
+++ b/main.tex
@@ -341,18 +341,8 @@ Controller Area Network (сеть контроллеров) -- это стандарт промышленной сети, о
 Следом за заголовком идет сегмент полезных данных, который сотоит из $n$ полей. Длина каждого из полей равняется 1 байту. Количество полей регулируется в заголовке. Замыкающим сегментом является трехбайтная контрольная сумма, которая высчитывется на основе всего кадра.
 
 
- 
-Алгоритм тестирования ECU можно описать следующим образом: 
-\begin{enumerate}
-\itemиз тестовой инструкции извлекаются данные, необходимые для отправки на ECU;
-\itemданные преобразуются в кадры управления VectorBox'ом;
-\itemинтерфейсный блок управления (VectorBox) генерирует управляющие сигналы и отправляет их на ECU;
-\itemпосле выполнения полученной инструкции ECU генерирует ответ, который отправляется на VectorBox;
-\itemпосле получения ответа от ECU VectorBox генерирует кадр и передает через интерфейс пользовательскому компьютеру (PC);
-\itemполученный кадр ответа транслирующая система сравнивает с ожидаемым значением, описанным в тестовой спецификации;
-\end{enumerate}
-
 \subsection {Сценарии тестирования}
+Для функционального тестирования автомобильных систем требуются специальные навыки в области автомобильной промышленности. Однако существуют общие способы проверки качества разрабатываемого программного обеспечения, которые, в том числе можно применить и к валидации ПО транспортных стредств.  
 Поведенческое тестирование автомобильных систем может быть выполнено следующими способами:
 \begin{itemize}
 \itemРазделение на классы эквивалентности 
@@ -370,9 +360,17 @@ Controller Area Network (сеть контроллеров) -- это стандарт промышленной сети, о
 Данный способ тестирования подразумевает валидацию требований, предоставленных аналитиками и инженерами, которые составляют требования. Например, если в требовании описано, что сеть должна переходить в активный режим при получении любого кадра, то в качестве входных данных формируется любой корректный в данной сети кадр.
 \end{itemize}
 
+Основываясь на общепринятых способах проверки качества программного обеспечения, а так же специфики области автомобильной промышленности алгоритм тестирования можно описать следующим образом: 
+\begin{enumerate}
+\itemиз тестовой инструкции извлекаются данные, необходимые для отправки на ECU;
+\itemданные преобразуются в кадры управления VectorBox'ом;
+\itemинтерфейсный блок управления (VectorBox) генерирует управляющие сигналы и отправляет их на ECU;
+\itemпосле выполнения полученной инструкции ECU генерирует ответ, который отправляется на VectorBox;
+\itemпосле получения ответа от ECU VectorBox генерирует кадр и передает через интерфейс пользовательскому компьютеру (PC);
+\itemполученный кадр ответа транслирующая система сравнивает с ожидаемым значением, описанным в тестовой спецификации;
+\end{enumerate}
 
-
-Основываясь на вышесказанном разрабатываемый язык должен предоставлять пользователям возможность получения передачи данных на сетевом уровне модели ISO по протоколам CAN, FlexRay, LIN и Ethernet.
+Из вышесказанного можно сделать вывод, что разрабатываемый язык для описания сценариев тестирования автомобильных систем должен предоставлять пользователям возможность передачи данных на сетевом уровне модели ISO по протоколам CAN, FlexRay и сравнения получаемых данных с ожидаемыми.
 
 %-------------------------------СИНТАКСИС ЯЗЫКА
 \section{Описание синтаксиса языка }
