описание реализации аннотации

--- a/main.tex
+++ b/main.tex
@@ -134,7 +134,7 @@ AST& Abstract syntax tree\\
 Бортовые системы современного автомобиля оборудованы электронным блоком управления с функцией самодиагностики, анализирующим основные системы автомобиля и оповещающим водителя об их неисправности. 
 Для компьютерной диагностики электронный блок управления на физческом уровне через специализированные диагностические интерфейсы подключается к стенду, оснащенному датчиками, посредством которых данные о работе систем передаются для дальнейшего анализа на компьютер. На этом этапе активируется управляющее устройство для сбора информации. 
 
-Одним из направлений в автомобильном тестировании является диагностика транспортных стредств, описанная в серии стандартов UDS ISO 14229.
+Одним из направлений в автомобильном тестировании является диагностика транспортных стредств, описанная в серии стандартов UDS ISO 14229\cite{stUds}.
 Unified Diagnostic Service (UDS) - автомобильный протокол, который позволяет диагностическим системам общаться с ECU, чтобы диагностировать ошибки и при необходимости повторно программировать ECU. Потребность в стандарте возникла, так как производители транстпортных средств собирают автомобильные компоненты у разных поставщиков. До возникновения UDS ISO 14229 поставщики должны были заниматься проблемами совместимости между различными диагностическими протоколами, сейчас же все ECU разрабатываются, придерживаясь данного стандарта. Архитектура UDS протокола разработана на основе сетевой модели OSI (Open System Interconnection) и реализует пятый (сетевой уровень) и седьмой (прикладной уровень) модели. 
 
 Стек протокола UDS предлагает четыре важных категории сервисов:
@@ -503,6 +503,7 @@ S – начальный символ грамматики.
 
 
 \subsection {Семантический анализ}
+\label{sSemanthAnalysis}
 В ходе семантического анализа проверяются отдельные правила записи исходных программ, которые не описываются контекстно-свободной грамматикой. Эти правила носят контекстно-зависимый характер, их называют семантическими соглашениями или контекстными условиями.
 
 Пользовательские инструкции, используемые в тестовых сценариях должны быть заранее обьявлены пользователями в специальной бибилиотеке. Так как инструкции должны быть сформулированы в произвольной форме, обговоренной внутри команды, состойщей из аналитиков и тестировщиков, то в качестве библиотеки может использоваться java класс, в котором для каждой инструкции тестироващики должны для реализовать отдельный метод. Чтобы разделить входные инструкции по смысловой нагрузке на входные и выходные данные и прикрепить к каждой инструкции метод, необходимый для ее выполнения разумно создать java-аннотации, название которых будет соответствовать ключевым словам языка: Send-- для отправки данных, Recieve -- для получения данных и т.д. 
@@ -512,7 +513,7 @@ S – начальный символ грамматики.
 
 Рефлексия (от лат. reflexio — обращение назад) — это механизм исследования данных о программе во время её выполнения. Рефлексия позволяет исследовать информацию о полях, методах и конструкторах классов. 
 
-Механизм рефлексии позволяет обрабатывать типы, отсутствующие при компиляции, но появившиеся во время выполнения программы. Возможность использования рефлексии реализована в Java с помощью Reflection API.  
+Механизм рефлексии позволяет обрабатывать типы, отсутствующие при компиляции, но появившиеся во время выполнения программы. Возможность использования рефлексии реализована в Java с помощью Reflection API.  Библиотека java.lang.reflect предоставляет возможность манипулировать кодом Java в динамическом режиме.
 
 
 % ------------------------------------------------ГЛАВА Реализационная часть
@@ -707,9 +708,9 @@ fragment S: [sS];
 \\\textbf{@Recieve} response [6E F1 01 00 01 A5], 
 \\\textbf{@Set} ignition off.
 
-На рисунке \ref{fAST} проилюстрировано абстрактное синтаксическое дерево для правила \textbf{scenario}. 
+На рисунке \ref{fAST} проилюстрировано абстрактное синтаксическое дерево для правила \textbf{specification}. 
 \begin{Figure}[h!]{Пример AST тестовой спецификации}{fAST}
-{\includegraphics[width=\linewidth]{res/parseTreeW}}
+{\includegraphics[width=\linewidth]{res/parseTree}}
 \label{fig:image}
 \end{Figure}
 
@@ -717,27 +718,38 @@ fragment S: [sS];
 
 
   
-%-------------------------------Использование грамматики
+%-------------------------------Реализация языка
 \chapter{Реализация языка}
 \label{cImplementation2}
-\section{Интерпретатор}
+\section{Компилятор}
 
 
 
-По описанным  правилам ANTLR генерирует файлы для распознания. 
-BddParser.java - это описание класса парсера, то есть синтаксического анализатора, отвечающего грамматике BddParser. 
-BddLexer.java -это описание класса лексера, или лексического анализатора, отвечающего грамматике 
-
-BddParser.tokens, BddLexer.tokens — это вспомогательные классы, которые содержат информацию о токенах
+По описанным в главе \ref{cImplementation} грамматическим правилам ANTLR4 генерирует файлы для распознания. 
+BddLexer.java-- это описание класса лексера, или лексического анализатора, отвечающего грамматике BddLexer. BddParser.java-- это описание класса парсера, то есть синтаксического анализатора, отвечающего грамматике BddParser. 
+BddParser.tokens, BddLexer.tokens — это вспомогательные классы, которые содержат информацию о токенах.
 
 
+Для использования разработанного парсера ANTLR4 представляет возможность сгенерировать два паттерна проектирования: Visitor (посетитель) и Listener (слушатель). Каждый из них предполагает анализ определенного подмножества узлов дерева разбора. Узлы дерева разбора, не являющиеся листьями, соответствуют каким-либо синтаксическим правилам грамматики. 
 
-Для использования разработанного парсера ANTLR4 представляет возможность сгенерировать два паттерна проектирования: Visitor (посеттель) и Listener(слушатель). Каждый из них предполагает анализ определенного подмножества узлов дерева разбора. Узлы дерева разбора, не являющиеся листьями, соответствуют каким-либо синтаксическим правилам грамматики. 
+В реализации языка используется паттерн Listener. BddParserListener.java, BddParserBaseListener.java— это интерфейс и класс, содержащие описания методов, которые позволяют выполнять действия, необходимые при обходе синтаксического дерева.
 
 
+Прежде чем описывать тестовые сценарии на разрабатываемом языке, необходмо определить конечный набор текстовыех инструкций. При этом для каждой инструкции нужно указать набор шагов, необходимых для выполнения при обнаружении данной инструкции в тестовом сценарии. Так как разрабатываемый язык реализуется на языке java, то и текстовые иснтрукции разумно описывать на java. 
 
 
-В реализации интерпретатора используется паттерн Listener. BddParserListener.java, BddParserBaseListener   — это интерфейс и класс, содержащие описания методов, которые позволяют выполнять действия, необходимые при обходе синтаксического дерева. При обходе абстрактного синтаксического дерева интерпретатор находит очередную нотированную инструкцию, с помощью рефлексии находит метод, аннотированный соотвествующим ключевым словом и добавляет ее в список необходимых для выполнения. При этом инструкция должна быть заранее определена пользователем в библиотеке инструкций. Во время семантического анализа все параметры пользовательских параметров приводятся к типам, объявленным в параметрах метода. Методы инcтрукций могут принимать параметры следующх типов: boolean, byte, short, integer, long, float, double, String, Enum. 
+Для описания пользовательских текстовых инструкций можно ввести специальные Java-аннотации. Аннотации в java-- это механизм для добаваления информации о метаданных к исходному коду. Это  мощнейшая часть java, которая была добавлена в JDK5. Аннотации предлагают альтернативу использованию XML описания и маркерных интерфейсов. Аннотации могут быть прикреплены к пакетам, классам, методам и и полям, однако сами по себе java-аннотации не имеют никакого эффекта на осуществление программы. 
+
+Введем новые аннотации, названия которых будут совпадать с ключевыми словами: Send, Set, Check и Recieve. С помощью мета-аннотаций @Retention и @Target определим область видимости и цель назначения для новых аннотаций. В листинге \ref{lst:checkAnnotatoin} представлена реализация аннотации для ключевого слова Check: она имеет видимость  во время выполнения и может быть применена к методам. Так же аннотация имеет метод text(), отвечающий за хранение текстовой инструкции. Аннотации Send, Recieve и Set имеют аналогичную реализацию. 
+\lstinputlisting[caption=реализация аннотации Check,language=java,  firstline=1,  lastline=6, label={lst:checkAnnotatoin}]{res/CheckAnnotation.txt}
+
+Для описания конечного набора инструкций, необходимых для опсания тестовых сценариев введем класс CommandLib.java. Это библиотека пользовательских инструкций, в котрой тестировщики должны описать методы, которые позволяют выполнять действия, необходимые для этих инструкций. Предположим, что для тестирования программного обеспечения для автомобильных систем одной из набора заранее обговоренных в команде фраз является фраза ``Send request [req]''. В этом случае необходимо реализовать метод с аннотацией Send,  у которой метод text() возвращает текстовую инструкцию. При этом текстовая инструкция содержит параметр req, который так же необходимо указать в качестве параметра метода. В листинге \ref{lst:SendMethod} представлена реализация данной инструкции.
+
+\lstinputlisting[caption=метод с аннотацией Send,language=java,  firstline=8,  lastline=12, label={lst:SendMethod}]{res/CheckAnnotation.txt}
+
+Во время обхода абстрактного синтаксического дерева необходимо по тексту инструкции, следующим после ключевого слова, находить и выполнять метод, определенный в пользовательской бибилиотеке CommandLib. Как обсуждалось в разделе \label{sSemanthAnalysis}, в java такая возможность может быть достигнута  благодаря Reflection API. Рефлексия позволяет производить анализ функциональных возможностей классов. Павет java.lang.reflection содержит квлассы Field, Method и Constructor, соотвественно описывающие поля, методы и конструкторы класса. Метод getMethods() возвращает массив открытых методов, принадлежащих анализируемому классу\cite{JavaTom1}. В данном случае анализироваться должен класс пользовательской библиотеки CommandLib.java. 
+
+При обходе абстрактного синтаксического дерева компилятор находит очередную нотированную инструкцию, с помощью рефлексии находит метод, аннотированный соотвествующим ключевым словом и добавляет ее в список необходимых для выполнения. При этом инструкция должна быть заранее определена пользователем в библиотеке инструкций. Во время семантического анализа все параметры пользовательских параметров приводятся к типам, объявленным в параметрах метода. Методы инcтрукций могут принимать параметры следующх типов: boolean, byte, short, integer, long, float, double, String, Enum. 
 
 При завершении обхода AST инструкции поочередно выполняются в том порядке, в котором были заданы в тестовой спецификации. 
 
@@ -841,7 +853,7 @@ Java Native Interface (JNI) — стандартный механизм для запуска кода, под управле
 
 
 
-%\section{Тестирование}
+\section{Тестирование}
 %Проверка адекватности модели, сравнение с существующими аналогами, выбор 
 %представительного множества тестов, анализ результатов испытаний.
 
@@ -853,29 +865,40 @@ Java Native Interface (JNI) — стандартный механизм для запуска кода, под управле
 
 \lstinputlisting[caption=входные данные для теста testSetEmptyInstruction, language=java,  firstline=13,  lastline=22, label={lst:testTwoInstructionsInTheSameLine} ]{res/testTwoInstructionsInTheSameLine.txt}
 
+Результат выполнения тестовых сценариев приведен на рисунке. %TODO add ref %
+Сводная информация представлена в спецификации для разработанного синтаксического анализатора и результаты выполнения тестов (таблица \ref{tTestSpecification}). В первой колонке указано название теста, во второй ошибка, ожидаемая в результате выполнения синтаксического анализа. В третьей колонке указан статус теста: в случае,если тест пройден успешно указывается статус Passed, иначе -- Failed.  
 
-Ниже представлена спецификация для разработанного синтаксического анализатора и результаты выполнения тестов
 
 
-%
-% Please add the following required packages to your document preamble:
-% \usepackage{booktabs}
-% \usepackage{graphicx}
-\begin{table}[]
-\resizebox{\textwidth}{!}{%
-\begin{tabular}{@{}lllll@{}}
-\begin{tabular}[c]{@{}l@{}}Входной\\ текст\end{tabular}                       & \begin{tabular}[c]{@{}l@{}}Ожидаемое\\ поведение\end{tabular} & Статус    &  &  \\
-@Pause [erf] ms                                                               & line 1:8 mismatched input 'erf' expecting INTEGER             & выполнено &  &  \\
-@Pause [] ms                                                                  & line 1:8 missing INTEGER at ']'                               & выполнено &  &  \\
-\begin{tabular}[c]{@{}l@{}}@Pause [2] ms\\ @Pause [] ms\end{tabular}          & line 2:8 missing INTEGER at ']'                               & выполнено &  &  \\
-\begin{tabular}[c]{@{}l@{}}@Pause [2] ms\\ @Send\end{tabular}                 & line 2:6 missing TEXT at '<EOF>'                              & выполнено &  &  \\
-\begin{tabular}[c]{@{}l@{}}@Pause [2] ms \\ @Send  @Pause [2] ms\end{tabular} & line 2:6 mismatched input '@Pause' expecting TEXT             & выполнено &  & 
-\end{tabular}%
-}
-\end{table}
+\begin{Table}{Тестовая спецификация реализации языка}{tTestSpecification}
+\begin{tabular}{ | m{4cm} | m{5cm}| m{1cm} | } 
+\hline
+\textbf{Название теста} & \textbf{Ожидаемое поведение} &\textbf{Статус теста}\\ 
+\hline
+PauseValule &line 2:8 mismatched input 'erf' expecting INTEGER &Passed\\
+\hline
+PauseNullValule& line 2:8 missing INTEGER at ']' & Passed \\ 
+\hline
+PauseGoodValPauseNullVal&line 3:8 missing INTEGER at ']' & Passed \\ 
+ \hline
+SendEmptyInstructionEOF&line 3:6 missing TEXT at '<EOF>' & Passed \\ 
+ \hline
+SendEmptyInstruction & line 3:6 mismatched input '@Pause' expecting TEXT &Passed \\ 
+ \hline
+SetEmptyInstruction& line 9:5 missing TEXT at 'NEWLINE'& Passed \\ 
+ \hline
+TwoInstrInTheSameLine& line 8:23 extraneous input '@Pause' expecting {<EOF>, TestCase} & Passed \\ 
+ \hline
+InstructionIsNotDeclared&Instruction 'request [] in functional addressing mode' is undefined in the lib 'CommandLib' & Passed \\ 
+\hline
+\end{tabular}
+\end{Table}
 
-В результате тестирования выявлено, что интерпретатор работает корректно.
 
+
+
+
+В результате тестирования выявлено, что интерпретатор работает корректно. 
 %\section{Примеры применения метода или программы}
 
 \Chapter{Заключение }
@@ -886,8 +909,9 @@ Java Native Interface (JNI) — стандартный механизм для запуска кода, под управле
 %перспективы продолжения работы 
 
 
-
+%\addcontentsline{toc}{chapter}{bibname}
 \bibliographystyle{gost71s}
+\bibliography{bibliography}
 %\bibliography{bibliography}                              
 
 
