--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,35 +1,40 @@
-@book{thesisrules2000,
-author="Г.П. Голованов and К.К. Гомоюнов and В.А. Дьяченко and С.П. Некрасов and В.В. Румянцев and Т.У. Тихомирова",
-title="Правила оформления студенческих выпускных работ и отчетов",
-editor="В.В. Глухова", 
-address="СПб.",
-publisher="Изд-во СПбГТУ",
-year=2000,
-pages="32 с.",
+
+@STANDARD{stUds,
+  author = {Alan Author},
+  title = {Road vehicles — Unified diagnostic
+services (UDS) —
+Part 1:
+Specification and requirements},
+  type = {ISO},
+  number = {14229-1},
+  year = {2013}
+}
+
+@book{Eshby1959,
+author="Росс Эшби У",
+title="An Introduction to Cybernetics",
+year=1959,
+pages="432 с.",
 language="russian"
 }
 
-@inproceedings{mori2009performance,
-booktitle="Proceedings of IEEE International Symposium on Information Theory",
-year="2009",
-author="Ryuhei Mori and Toshiyuki Tanaka",
-title="Performance and Construction of Polar Codes on Symmetric Binary-Input Memoryless Channels "} 
-
-
-@article{mori2009performanceof ,
-journal="IEEE Communications Letters",
-volume="13",
-number="7",
-month="July",
-year="2009",
-author="Ryuhei Mori and Toshiyuki Tanaka",
-title="Performance of Polar Codes with the Construction using Density Evolution "} 
-@book{Combinatorics,
-   language="russian",
-author="Э. Рейнгольд and Ю. Нивергельт and Н. Део",
-title="Комбинаторные алгоритмы: теория и практика",
-year="1980",
-publisher="Мир",
-address="М.",
-numpages=478
+@book{Beyzer2004,
+author="Бейзер Б.",
+title="Тестирование чёрного ящика. Технологии функционального тестирования программного обеспечения и систем.",
+address="Питер",
+publisher="Питер",
+year=2004,
+pages="320 с.",
+language="russian"
 }
+
+@book{JavaTom1,
+author="Хорстманн, Кей С.",
+title="Java. Библиотека профессионала, том 1. Основы",
+address="Питер",
+publisher="ИД Вильямс",
+year=2017,
+pages="864 с.",
+language="russian"
+}
+
