--- a/bibliography.bib
+++ b/bibliography.bib
@@ -18,6 +18,14 @@ pages="432 с.",
 language="russian"
 }
 
+@book{conceptPL,
+author="Себеста Роберт У.",
+title="An Introduction to Cybernetics",
+year=1959,
+pages="432 с.",
+language="russian"
+}
+
 @book{Beyzer2004,
 author="Бейзер Б.",
 title="Тестирование чёрного ящика. Технологии функционального тестирования программного обеспечения и систем.",
